fix: z-index

--- a/packages/docs/themes/subspace/source/css/components/_spotlightbox.scss
+++ b/packages/docs/themes/subspace/source/css/components/_spotlightbox.scss
@@ -86,5 +86,5 @@
 
 main {
   position: relative;
-  z-index: 100;
+  z-index: 90;
 }
